# z-scripts

./: .gitignore  README.md  pyproject.toml
z_scripts/: auto_latexmk.py  git_check.py  latex_check.py  rm2trash.py
